--- a/pages/property-dashboard.html
+++ b/pages/property-dashboard.html
@@ -44,6 +44,7 @@
   <script src="../js/property-dashboard.js"></script>
   <script src="../js/lang-switcher.js"></script>
   <script src="/core/i18n/I18nManager.js"></script>
+  <script src="/core/init/setActivePropertyFromQuery.js"></script>
   <script>
     // Initialize I18n for property dashboard
     (function(){
@@ -52,6 +53,8 @@
         (async function(){
           try {
             await window.__nexefii_i18n.loadTranslations();
+            window.NEXEFII = window.NEXEFII || {};
+            window.NEXEFII.i18n = window.__nexefii_i18n;
             await window.__nexefii_i18n.loadSegment(null,'dashboard');
             window.__nexefii_i18n.applyToDOM(document);
             var t = document.querySelector('title'); if(t) t.textContent = window.__nexefii_i18n.t('dashboard.title');
