--- a/pages/wizard.html
+++ b/pages/wizard.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="/core/i18n/I18nManager.js"></script>
+  <script src="/core/init/setActivePropertyFromQuery.js"></script>
   
     <style>
     .progress-container {
@@ -1246,6 +1247,8 @@
       (async function(){
         try {
           await window.__nexefii_i18n.loadTranslations();
+          window.NEXEFII = window.NEXEFII || {};
+          window.NEXEFII.i18n = window.__nexefii_i18n;
           await window.__nexefii_i18n.loadSegment(null,'wizard');
           window.__nexefii_i18n.applyToDOM(document);
           var t = document.querySelector('title'); if(t) t.textContent = window.__nexefii_i18n.t('wizard.title');
@@ -2141,6 +2144,17 @@
           localStorage.setItem(sessionKey, JSON.stringify(session));
           localStorage.setItem(altSessionKey, JSON.stringify(session));
           window.NEXEFII.currentUser = session;
+          // Publish selection for opener/master-control to consume
+          try {
+            const selectKey = propRecord.key || propRecord.id || propRecord.slug;
+            if (selectKey) {
+              try { localStorage.setItem('nexefii_wizard_selected_property', selectKey); } catch(e){}
+              try { localStorage.setItem('nexefii_active_property', selectKey); } catch(e){}
+              if (window.SessionContext && typeof window.SessionContext.setActiveProperty === 'function') {
+                try { SessionContext.setActiveProperty(selectKey); } catch(e){}
+              }
+            }
+          } catch(e) { /* best-effort, ignore */ }
         } catch (e) { console.warn('[Wizard] session persist failed', e); }
       } catch (e) { console.warn('[Wizard] upsert property failed', e); }
 
@@ -2161,8 +2175,13 @@
 
     // === Navigation block: errors here should NOT show the creation alert ===
     try {
-      (function safeNavigateToDashboard() {
-        const target = `/property/${property.slug}/dashboard`;
+      (function safeNavigateToMaster() {
+        // prefer slug but fallback to other identifiers
+        const slug = (property && (property.slug || property.propertySlug || property.propertyId || property.id || property.key));
+        const paramVal = slug ? String(slug) : '';
+        const params = new URLSearchParams();
+        if (paramVal) params.set('selectedProperty', paramVal);
+        const target = '/master-control.html' + (params.toString() ? ('?' + params.toString()) : '');
         try {
           const maybeRouter = window.NEXEFII && window.NEXEFII.router;
           if (maybeRouter && typeof maybeRouter.navigate === 'function') {
@@ -2544,8 +2563,14 @@
         try { localStorage.setItem('nexefii_active_property', String(propId)); } catch(e){}
         // Close the wizard window if it was opened as a popup
         try { if (window.opener) { window.close(); return; } } catch(e){}
-        // If not popup, navigate back to master-control to show result
-        try { location.href = '/master-control.html'; } catch(e){}
+        // If not popup, navigate back to master-control to show result (include selectedProperty)
+        try {
+          const slug = String(propId || '');
+          const params = new URLSearchParams();
+          if (slug) params.set('selectedProperty', slug);
+          const target = '/master-control.html' + (params.toString() ? ('?' + params.toString()) : '');
+          try { location.href = target; } catch(e) { /* ignore */ }
+        } catch(e) { /* ignore */ }
       } catch(e){ console.warn('[Wizard] wizardSelectProperty error', e); }
     };
 
