Até a aba integrações

--- a/Bkp/migration-20251112T140949Z-full-ilux-to-nexefii/master-control.html
+++ b/Bkp/migration-20251112T140949Z-full-ilux-to-nexefii/master-control.html
@@ -479,7 +479,8 @@
       </div>
     </div>
 
-    <!-- Users Tab -->
+    <!-- Canonical Users tab (commented out in backup) -->
+    <!--
     <div class="tab-content" id="tab-users">
       <div class="users-section">
         <div class="master-card">
@@ -557,6 +558,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <!-- Settings Tab (NEW) -->
     <div class="tab-content" id="tab-settings">
