--- a/backup_mc_quebrado/master-control.html
+++ b/backup_mc_quebrado/master-control.html
@@ -399,7 +399,8 @@
       </div>
     </div>
 
-    <!-- Users Tab: minimal user management for MASTER -->
+    <!-- Duplicate minimal Users tab (commented out during canonicalization) -->
+    <!--
     <div class="tab-content nx-section" id="tab-users" style="display:none;">
       <div class="breadcrumb"><span class="icon">👥</span> <span data-i18n="breadcrumb.users">Usuários</span></div>
       <div class="section-header">
@@ -453,6 +454,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <!-- Backup & Restore Tab (OLD - TO BE REMOVED) -->
     <div class="tab-content nx-section" id="tab-backup" style="display:none;">
@@ -605,7 +607,8 @@
       </div>
     </div>
 
-    <!-- Users Tab -->
+    <!-- Canonical Users tab (commented out in backup) -->
+    <!--
     <div class="tab-content nx-section" id="tab-users">
       <div class="users-section">
         <div class="master-card nx-card">
@@ -683,6 +686,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <!-- Settings Tab (NEW) -->
     <div class="tab-content nx-section" id="tab-settings">
